small changes to margin

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ margin-bottom: 12px;
 }
 
 .link-desc{
+    margin:20px 0px 5px 0px;
     font-size:12px;
     font-style: normal;
     text-align: center;
